# nnunet-baseline

./: README.md  pyproject.toml
docker/: Dockerfile
docker/app/: main.py  main.sh  requirements.txt
erbium/: __entry__.py  __init__.py  __main__.py
