[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erbium"
version = "0.0.1"
description = "Project Neura's Internal Computing Platform"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Project Neura", email = "central@projectneura.org" }
]
dependencies = []

[tool.hatch.build.targets.sdist]
only-include = ["erbium"]

[tool.hatch.build.targets.wheel]
packages = ["erbium"]

[project.urls]
Homepage = "https://github.com/ProjectNeura/Erbium"
Documentation = "https://github.com/ProjectNeura/Erbium"
Repository = "https://github.com/ProjectNeura/Erbium"

[project.scripts]
mipcandy = "erbium:__entry__"